Commit Tipografia P. Cambie la tipografia de los P del carrusel para que simulen un h1

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                     <img src="Imagenes/Juli fondo.JPG" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
                     <div class="carousel-caption tituloFondo">
                         <h1 class="titulosImagenFondo">Nutrición J.G</h1>
-                        <div class="botonFondoPrincipal">
+                        <div>
                             <a href="reserva-tu-turno.html">
                                 <button class="botonFondo1">Reserva tu turno</button>
                             </a>
@@ -70,7 +70,7 @@
                     <img src="Imagenes/foto compu mano.JPG" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
                     <div class="carousel-caption tituloFondo">
                         <p class="titulosImagenFondo">Nutrición J.G</p>
-                        <div class="botonFondoPrincipal">
+                        <div>
                             <a href="reserva-tu-turno.html">
                                 <button class="botonFondo1">Reserva tu turno</button>
                             </a>
@@ -81,7 +81,7 @@
                     <img src="Imagenes/juli compu.JPG" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
                     <div class="carousel-caption tituloFondo">
                         <p class="titulosImagenFondo">Nutrición J.G</p>
-                        <div class="botonFondoPrincipal">
+                        <div>
                             <a href="reserva-tu-turno.html">
                                 <button class="botonFondo1">Reserva tu turno</button>
                             </a>
