--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
                     </div>
                 </div>
                 <div class="carousel-item fondosIndex">
-                    <img src="Imagenes/juli compu.JPG" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
+                    <img src="Imagenes/Juli compu carrusel.jpg" class="d-block w-100" loading="lazy" alt="Fondo de la pagina en un carrusel de fotos">
                     <div class="carousel-caption tituloFondo">
                         <p class="titulosImagenFondo">Nutrición J.G</p>
                         <div>
@@ -104,9 +104,9 @@
         <section class="container-fluid seccionSobreMi">
             <h2 class="tituloSobreMi titulos">Sobre mi</h2>
             <div class="row d-flex justify-content-evenly sobreMiImg">
-                <img src="Imagenes/Foto Juli Gimenez nutricionista.jpeg" alt="Foto Juli Gimenez nutricionista" loading="lazy" class="col-12 col-lg-6 img-fluid fotoNutricionista">
+                <img src="Imagenes/Foto juli gimenez nutricionista.JPG" alt="Foto Juli Gimenez nutricionista" loading="lazy" class="col-12 col-lg-6 img-fluid fotoNutricionista">
                 <div class="col-12 col-lg-6">
-                    <p class="sobreMiTexto"> Hola! Mi nombre es Juli y soy Licenciada en nutrición. Quiero que trabajemos juntos para mejorar tu relación con la comida y que gracias a esto, puedas tener una alimentación saludable y una mejor calidad de vida.
+                    <p class="sobreMiTexto"> ¡Hola! Mi nombre es Juli y quiero darte la bienvenida a mi página web. Como Licenciada en Nutrición, creo que la base de una vida saludable comienza en torno a lo alimentario, es por esto que pongo siempre mi mayor esfuerzo en adaptar los planes de alimentación 100% a cada individuo considerando sus hábitos de vida y sus necesidades nutricionales. <br> <strong> Mi objetivo </strong> es que trabajemos juntos para mejorar tu relación con la comida y que, gracias a esto, puedas tener una alimentación saludable y una mejor calidad de vida. <br> Vamos a alcanzar nuestras metas paulatinamente, convirtiendo pequeños cambios en un habito diario.                         
                     </p>
                 </div>
             </div> 
@@ -117,7 +117,7 @@
         <section class="container-fluid">
             <h2 id="serviciosPaginaInicio" class="titulos">Servicios</h2>
             <div class="row d-flex justify-content-evenly seccionServicios">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center   imagenesServicios">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <a href="Planes-de-alimentación.html">
                         <img src="Imagenes/Planes de alimentacion.png" loading="lazy" alt="Servicio de planes de alimentación personalizados para cada persona" class="imgServicios">
                         <p>Planes de alimentación</p>
@@ -158,7 +158,7 @@
                     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3284.9966672702735!2d-58.53884279797884!3d-34.57895088139242!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x95bcb776c10a751f%3A0xdb2ac8a876043fa1!2sBelgrano%203953%2C%20San%20Mart%C3%ADn%2C%20Provincia%20de%20Buenos%20Aires!5e0!3m2!1ses-419!2sar!4v1633394813154!5m2!1ses-419!2sar" style="border:0;" allowfullscreen="" loading="lazy" class="col-12 col-lg-6 mapaConsultorio">
                     </iframe>       
                     <div class="col-12 col-lg-6 direccionConsultorio">
-                        <p> Dirección: Belgrano 3953 (Localidad de San Martin)</p>
+                        <p class="textoMapa"> Dirección: Belgrano 3953 (Localidad de San Martin)</p>
                     </div>
             </div>
         </section>
