Cambie las imagenes de servicios en index

--- a/index.html
+++ b/index.html
@@ -119,13 +119,13 @@
             <div class="row d-flex justify-content-evenly seccionServicios">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <a href="Planes-de-alimentación.html">
-                        <img src="Imagenes/Planes de alimentacion.png" loading="lazy" alt="Servicio de planes de alimentación personalizados para cada persona" class="imgServicios">
+                        <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación personalizados para cada persona" class="imgServicios">
                         <p>Planes de alimentación</p>
                     </a>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <a href="Antropometrias.html">   
-                        <img src="Imagenes/Antropometrias.PNG" loading="lazy" alt="Servicio de antropometrias para conocer la composicion corporal" class="imgServicios"> 
+                        <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias para conocer la composicion corporal" class="imgServicios"> 
                         <p>Antropometrias</p>
                     </a>
                 </div>
@@ -137,13 +137,13 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 d-flex justify-content-center imagenesServicios">
                     <a href="#">
-                        <img src="Imagenes/Atencion online.jpeg" loading="lazy" alt="Servicio de Consultas Online" class="imgServicios">
+                        <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="imgServicios">
                         <p>Atención online</p>
                     </a>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center imagenesServicios">
                     <a href="">
-                        <img src="Imagenes/Atencion a domicilio.jpg" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
+                        <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
                         <p>Atención a domicilio</p>
                     </a>
                 </div>
