Fondo a fotos de servicios index

--- a/index.html
+++ b/index.html
@@ -117,35 +117,55 @@
         <section class="container-fluid">
             <h2 id="serviciosPaginaInicio" class="titulos">Servicios</h2>
             <div class="row d-flex justify-content-evenly seccionServicios">
-                <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
-                    <a href="Planes-de-alimentación.html">
+                <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center">
+                    <div class="contenedorServicios">
+                        <a href="Planes-de-alimentación.html">
                         <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación personalizados para cada persona" class="imgServicios">
-                        <p>Planes de alimentación</p>
-                    </a>
+                            <div class="capaIndex">
+                                <p>Planes de alimentación</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
-                    <a href="Antropometrias.html">   
-                        <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias para conocer la composicion corporal" class="imgServicios"> 
-                        <p>Antropometrias</p>
-                    </a>
+                    <div class="contenedorServicios">
+                        <a href="Antropometrias.html">   
+                        <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias para conocer la composicion corporal" class="imgServicios">
+                            <div class="capaIndex">
+                                <p>Antropometrias</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center  imagenesServicios">
-                    <a href="Talleres-de-alimentación.html">
+                    <div class="contenedorServicios">
+                        <a href="Talleres-de-alimentación.html">
                         <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación para grupos presencial u online" class="imgServicios">
-                        <p>Talleres de alimentación</p>
-                    </a>
+                            <div class="capaIndex">
+                                <p>Talleres de alimentación</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-12 col-sm-6 col-md-6 col-lg-6 d-flex justify-content-center imagenesServicios">
-                    <a href="#">
+                    <div class="contenedorServicios">
+                        <a href="#">
                         <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="imgServicios">
-                        <p>Atención online</p>
-                    </a>
+                            <div class="capaIndex">
+                                <p>Atención online</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-12 col-sm-12 col-md-6 col-lg-6 d-flex justify-content-center imagenesServicios">
-                    <a href="">
+                    <div class="contenedorServicios">
+                        <a href="">
                         <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
-                        <p>Atención a domicilio</p>
-                    </a>
+                            <div class="capaIndex">
+                                <p>Atención a domicilio</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section>
