--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
             <div class="text-center p-3">
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
-                <a href="https://l.instagram.com/?u=https%3A%2F%2Fbit.ly%2F2Qr7tfL&e=ATM2NK9ZAzi1aKtLLCFuGXgBAV9aSXW-yYDzzeCIutsl4Y_UqkS_8uWgUgr_BeFst4SflZXb4_vjMCfu&s=1" target="_blank" class="pieDePagina">
+                <a target="_blank" class="pieDePagina" href="https://api.whatsapp.com/send?phone=+5491124028206&text= Hola Juliana! Quería más información acerca de">
                     <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
