--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -138,7 +138,7 @@
             <div class="row d-flex justify-content-evenly">
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
                     <a href="Antropometrias.html">   
-                        <img src="Imagenes/Antropometrias.PNG" loading="lazy" alt="Servicio de antropometrias" class="imgOtrosServicios"> 
+                        <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgOtrosServicios"> 
                         <p>Antropometrias</p>
                     </a>
                 </div>
