Corregi nombres de paginas de servicios en index

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             <div class="row d-flex justify-content-evenly seccionServicios">
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center">
                     <div class="contenedorServicios">
-                        <a href="Planes-de-alimentación.html">
+                        <a href="planes-de-alimentación.html">
                         <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación personalizados para cada persona" class="imgServicios">
                             <div class="capaIndex">
                                 <p>Planes de alimentación</p>
@@ -129,7 +129,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center imagenesServicios">
                     <div class="contenedorServicios">
-                        <a href="Antropometrias.html">   
+                        <a href="antropometrias.html">   
                         <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias para conocer la composicion corporal" class="imgServicios">
                             <div class="capaIndex">
                                 <p>Antropometrias</p>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center  imagenesServicios">
                     <div class="contenedorServicios">
-                        <a href="Talleres-de-alimentación.html">
+                        <a href="talleres-de-alimentación.html">
                         <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación para grupos presencial u online" class="imgServicios">
                             <div class="capaIndex">
                                 <p>Talleres de alimentación</p>
