--- a/index.html
+++ b/index.html
@@ -122,7 +122,8 @@
                         <a href="planes-de-alimentación.html">
                         <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación personalizados para cada persona" class="imgServicios">
                             <div class="capaIndex">
-                                <p>Planes de alimentación</p>
+                                <p class="textoDelServicio">Planes de alimentación</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
                             </div>
                         </a>
                     </div>
@@ -132,7 +133,8 @@
                         <a href="antropometrias.html">   
                         <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias para conocer la composicion corporal" class="imgServicios">
                             <div class="capaIndex">
-                                <p>Antropometrias</p>
+                                <p class="textoDelServicio">Antropometrias</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
                             </div>
                         </a>
                     </div>
@@ -142,7 +144,8 @@
                         <a href="talleres-de-alimentación.html">
                         <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación para grupos presencial u online" class="imgServicios">
                             <div class="capaIndex">
-                                <p>Talleres de alimentación</p>
+                                <p class="textoDelServicio">Talleres de alimentación</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
                             </div>
                         </a>
                     </div>
@@ -152,7 +155,8 @@
                         <a href="#">
                         <img src="Imagenes/online index.JPG" loading="lazy" alt="Servicio de Consultas Online" class="imgServicios">
                             <div class="capaIndex">
-                                <p>Atención online</p>
+                                <p class="textoDelServicio">Atención online</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
                             </div>
                         </a>
                     </div>
@@ -162,7 +166,8 @@
                         <a href="">
                         <img src="Imagenes/domicilio index.JPG" loading="lazy" alt="Servicio de atención a domicilio" class="imgServicios">
                             <div class="capaIndex">
-                                <p>Atención a domicilio</p>
+                                <p class="textoDelServicio">Atención a domicilio</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
                             </div>
                         </a>
                     </div>
