Arregle las imagenes de todas las paginas y sume el mismo efecto de las imagenes de servicios del index

--- a/antropometrias.html
+++ b/antropometrias.html
@@ -51,7 +51,7 @@
     <main class="container-fluid">
         <h1 class="tituloAntropometria"> Antropometrías</h1>
         <section class="row d-flex justify-content-evenly antroFotoIzquierda">
-            <img class="col-12 col-lg-6 img-fluid fotoAntro" loading="lazy" src="Imagenes/Antropometrias.PNG" alt="Foto principal de la pagina de antropometrias">
+            <img class="col-12 col-lg-6 img-fluid fotoAntro" loading="lazy" src="Imagenes/Pag antro.JPG" alt="Foto principal de la pagina de antropometrias">
             <p class="col-12 col-lg-6 textosAntro">La antropometria es una serie de mediciones a partir de la cual podemos conocer con más especificidad, como es la composición corporal de cada uno de nosotros. <br>Esta herramienta es un excelente complemento a la balanza ya que nos permite saber realmente por que esta conformado nuestro peso. <br> Entonces gracias a la antropometria vamos a conocer dos variables: <br> Las que son modificables (Con una buena alimentación y entrenamiento):  MASA MUSCULAR y MASA GRASA <br> Las no modificables: MASA OSEA (esqueleto), PIEL y MASA RESIDUAL (Organos y visceras)</p>    
         </section>
 
@@ -126,16 +126,26 @@
         <section class="container-fluid otrosServicios">
             <div class="row d-flex justify-content-evenly">
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
-                    <a href="Planes-de-alimentación.html">
-                        <img src="Imagenes/Planes de alimentacion.png" loading="lazy" alt="Servicio de planes de alimentación" class="imgOtrosServicios">
-                        <p>Planes de alimentación</p>
-                    </a>
+                    <div class="contenedorServicios">
+                        <a href="Planes-de-alimentación.html">
+                            <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación" class="imgServicios">
+                            <div class="capaIndex">
+                                <p class="textoDelServicio">Planes de alimentación</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
-                    <a href="Talleres-de-alimentación.html">
-                        <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgOtrosServicios">
-                        <p>Talleres de alimentación</p>
-                    </a>
+                    <div class="contenedorServicios">
+                        <a href="Talleres-de-alimentación.html">
+                            <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
+                            <div class="capaIndex">
+                                <p class="textoDelServicio">Talleres de alimentación</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section> 
