--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -137,16 +137,26 @@
         <section class="container-fluid otrosServicios">
             <div class="row d-flex justify-content-evenly">
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
-                    <a href="Antropometrias.html">   
-                        <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgOtrosServicios"> 
-                        <p>Antropometrias</p>
-                    </a>
+                    <div class="contenedorServicios">
+                        <a href="Antropometrias.html">   
+                            <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
+                            <div class="capaIndex">
+                                <p class="textoDelServicio">Antropometrias</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
-                    <a href="Talleres-de-alimentación.html">
-                        <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgOtrosServicios">
-                        <p>Talleres de alimentación</p>
-                    </a>
+                    <div class="contenedorServicios">
+                        <a href="Talleres-de-alimentación.html">
+                            <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
+                            <div class="capaIndex">
+                                <p class="textoDelServicio">Talleres de alimentación</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section> 
