--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -121,16 +121,26 @@
         <section class="container-fluid otrosServicios">
             <div class="row d-flex justify-content-evenly">
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
-                    <a href="Planes-de-alimentación.html">
-                        <img src="Imagenes/Planes de alimentacion.png" loading="lazy" alt="Servicio de plan de alimentación" class="imgOtrosServicios">
-                        <p>Planes de alimentación</p>
-                    </a>
+                    <div class="contenedorServicios">
+                        <a href="Planes-de-alimentación.html">
+                            <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de plan de alimentación" class="imgServicios">
+                            <div class="capaIndex">
+                                <p class="textoDelServicio">Planes de alimentación</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
-                    <a href="Antropometrias.html">   
-                        <img src="Imagenes/Antropometrias.PNG" loading="lazy" alt="Servicio de antropometrias" class="imgOtrosServicios"> 
-                        <p>Antropometrias</p>
-                    </a>
+                    <div class="contenedorServicios">
+                        <a href="Antropometrias.html">   
+                            <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
+                            <div class="capaIndex">
+                                <p class="textoDelServicio">Antropometrías</p>
+                                <p class="clicMasInfo">Hacé clic para más información</p>
+                            </div>
+                        </a>
+                    </div>
                 </div>
             </div>
         </section> 
