Cambie los footer xq ocupaban mucho espacio y no era necesario

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
 
     <footer class="text-center text-white">
         <section class="container p-4">
-            <div class="mb-4">
+            <div>
                 <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button"> 
                     <i title="Icono de whatsapp" class="fab fa-whatsapp"></i>
                 </a>
@@ -219,7 +219,7 @@
                             </p>
                         </div>
                         <div class="col-md-5 col-12">
-                            <div class="form-outline form-white mb-4">
+                            <div class="form-outline form-white">
                                 <input type="email" id="form5Example21" class="form-control"/>
                                 <label class="form-label" for="form5Example21">Correo electronico</label>
                             </div>
@@ -232,7 +232,7 @@
                     </div>
                 </form>
             </div>
-            <div class="text-center p-3">
+            <div class="text-center">
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
                 <a target="_blank" class="pieDePagina" href="https://api.whatsapp.com/send?phone=+5491124028206&text= Hola Juliana! Quería más información acerca de">
