--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -166,7 +166,7 @@
 
     <footer class="text-center text-white">
         <section class="container p-4">
-            <div class="mb-4">
+            <div>
                 <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button"> 
                     <i title="Icono de whatsapp" class="fab fa-whatsapp"></i>
                 </a>
@@ -183,8 +183,8 @@
                     <i title="Icono de Linkedin" class="fab fa-linkedin-in"></i>
                 </a>
             </div>
-            <div class="">
-                <form action="">
+            <div>
+                <form action="archivo.php" method="POST">
                     <div class="row d-flex justify-content-center">
                         <div class="col-auto">
                             <p class="pt-2">
@@ -192,7 +192,7 @@
                             </p>
                         </div>
                         <div class="col-md-5 col-12">
-                            <div class="form-outline form-white mb-4">
+                            <div class="form-outline form-white">
                                 <input type="email" id="form5Example21" class="form-control"/>
                                 <label class="form-label" for="form5Example21">Correo electronico</label>
                             </div>
@@ -205,10 +205,10 @@
                     </div>
                 </form>
             </div>
-            <div class="text-center p-3">
+            <div class="text-center">
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
-                <a href="https://l.instagram.com/?u=https%3A%2F%2Fbit.ly%2F2Qr7tfL&e=ATM2NK9ZAzi1aKtLLCFuGXgBAV9aSXW-yYDzzeCIutsl4Y_UqkS_8uWgUgr_BeFst4SflZXb4_vjMCfu&s=1" target="_blank" class="pieDePagina">
+                <a target="_blank" class="pieDePagina" href="https://api.whatsapp.com/send?phone=+5491124028206&text= Hola Juliana! Quería más información acerca de">
                     <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
