--- a/antropometrias.html
+++ b/antropometrias.html
@@ -127,7 +127,7 @@
             <div class="row d-flex justify-content-evenly">
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
                     <div class="contenedorServicios">
-                        <a href="Planes-de-alimentación.html">
+                        <a href="planes-de-alimentación.html">
                             <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Planes de alimentación</p>
@@ -138,7 +138,7 @@
                 </div>
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
                     <div class="contenedorServicios">
-                        <a href="Talleres-de-alimentación.html">
+                        <a href="talleres-de-alimentación.html">
                             <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Talleres de alimentación</p>
