--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -138,7 +138,7 @@
             <div class="row d-flex justify-content-evenly">
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
                     <div class="contenedorServicios">
-                        <a href="Antropometrias.html">   
+                        <a href="antropometrias.html">   
                             <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Antropometrias</p>
@@ -149,7 +149,7 @@
                 </div>
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
                     <div class="contenedorServicios">
-                        <a href="Talleres-de-alimentación.html">
+                        <a href="talleres-de-alimentación.html">
                             <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Talleres de alimentación</p>
