--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -122,7 +122,7 @@
             <div class="row d-flex justify-content-evenly">
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
                     <div class="contenedorServicios">
-                        <a href="Planes-de-alimentación.html">
+                        <a href="planes-de-alimentación.html">
                             <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de plan de alimentación" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Planes de alimentación</p>
@@ -133,7 +133,7 @@
                 </div>
                 <div class="col-12 col-lg-3 d-flex justify-content-evenly">
                     <div class="contenedorServicios">
-                        <a href="Antropometrias.html">   
+                        <a href="antropometrias.html">   
                             <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Antropometrías</p>
