Cambie fotos de algunas paginas y acomode los tamaños

--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
                 <div class="col-12 col-sm-6 col-md-4 col-lg-4 d-flex justify-content-center  imagenesServicios">
                     <div class="contenedorServicios">
                         <a href="talleres-de-alimentación.html">
-                        <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación para grupos presencial u online" class="imgServicios">
+                        <img src="Imagenes/Foto taller de alimentacion.jpeg" loading="lazy" alt="Servicio de talleres de alimentación para grupos presencial u online" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Talleres de alimentación</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
