--- a/antropometrias.html
+++ b/antropometrias.html
@@ -51,7 +51,7 @@
     <main class="container-fluid">
         <h1 class="tituloAntropometria"> Antropometrías</h1>
         <section class="row d-flex justify-content-evenly antroFotoIzquierda">
-            <img class="col-12 col-lg-6 img-fluid fotoAntro" loading="lazy" src="Imagenes/Pag antro.JPG" alt="Foto principal de la pagina de antropometrias">
+            <img class="col-12 col-lg-6 img-fluid fotoAntro" loading="lazy" src="Imagenes/Foto 1 antro.JPG" alt="Foto principal de la pagina de antropometrias">
             <p class="col-12 col-lg-6 textosAntro">La antropometria es una serie de mediciones a partir de la cual podemos conocer con más especificidad, como es la composición corporal de cada uno de nosotros. <br>Esta herramienta es un excelente complemento a la balanza ya que nos permite saber realmente por que esta conformado nuestro peso. <br> Entonces gracias a la antropometria vamos a conocer dos variables: <br> Las que son modificables (Con una buena alimentación y entrenamiento):  MASA MUSCULAR y MASA GRASA <br> Las no modificables: MASA OSEA (esqueleto), PIEL y MASA RESIDUAL (Organos y visceras)</p>    
         </section>
 
@@ -60,7 +60,7 @@
         <section>
             <h2 class="titulos">Determinacion de masa adiposa</h2>
             <div class="row d-flex justify-content-evenly antroFotoADerecha">
-                <img class="col-12 col-lg-6 img-fluid fotoGrasa" loading="lazy" src="Imagenes/masa grasa antro.jpg" alt="Imagen de la masa grasa determinada a traves de la antropometria">
+                <img class="col-12 col-lg-6 img-fluid fotoGrasa" loading="lazy" src="Imagenes/antro index.JPG" alt="Imagen de la masa grasa determinada a traves de la antropometria">
                 <p class="col-12 col-lg-6 textosAntro"> La masa adiposa se determina a partir de los pliegues grasos. Los mismos se pueden evaluar individualmente o utilizar como parametro la SUMATORIA DE 6 PLIEGUES (Triceps, Sub-escapular, Supraespinal, Abdominal, Muslo y Pantorilla): Un índice excelente para analizar como esta nuestro tejido adiposo actualmente y para ver los progresos a lo largo del tiempo.</p>
             </div>
         </section>
@@ -71,7 +71,7 @@
         <section>
             <h2 class="titulos tituloMasaMuscular">Determinacion de masa muscular</h2>
             <div class="row d-flex justify-content-evenly antroFotoAIzquierda">
-                <img class="col-12 col-lg-6 img-fluid fotoMusculo" loading="lazy" src="Imagenes/Masa muscular.jpg" alt="Imagen de la masa muscular determinada a traves de la antropometria">
+                <img class="col-12 col-lg-6 img-fluid fotoMusculo" loading="lazy" src="Imagenes/Pag antro.JPG" alt="Imagen de la masa muscular determinada a traves de la antropometria">
                 <p class="col-12 col-lg-6 textosAntro textoMasaMuscular"> La masa muscular es un elemento fundamental de la composición corporal y de la salud de todas las personas, tanto hombres como mujeres, niños y ancianos. <br>Con esto quiero decir que tanto la alimentación para aumentar la masa muscular como el entrenamiento de fuerza, deben ser dos pilares que no pueden faltar en la vida de ninguno de nosotros.</p>
             </div>
         </section> 
