--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>NUTRICION JG: Mejorá tu alimentación</title>
     <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="SASS/main.css">
     <script src="https://kit.fontawesome.com/a31a6b2861.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -194,19 +194,19 @@
     <footer class="text-center text-white">
         <section class="container p-4">
             <div>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button"> 
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de" role="button"> 
                     <i title="Icono de whatsapp" class="fab fa-whatsapp"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">  
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.instagram.com/nutricion.jg/" role="button">  
                     <i title="Icono de Instagram" class="fab fa-instagram"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.facebook.com/Nutrici%C3%B3njg-113083484374716/?ref=py_c" role="button">
                     <i title="Icono de facebook" class="fab fa-facebook-f"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
                     <i title="Icono de mail" class="far fa-envelope"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.linkedin.com/in/juliana-gimenez-9651a5196/?originalSubdomain=ar" role="button">
                     <i title="Icono de Linkedin" class="fab fa-linkedin-in"></i>
                 </a>
             </div>
@@ -235,7 +235,7 @@
             <div class="text-center">
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
-                <a target="_blank" class="pieDePagina" href="https://api.whatsapp.com/send?phone=+5491124028206&text= Hola Juliana! Quería más información acerca de">
+                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
                     <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
