--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -9,7 +9,7 @@
     <title>NUTRICION JG: Mejorá tu alimentación</title>
     <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="SASS/main.css">
     <script src="https://kit.fontawesome.com/a31a6b2861.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -52,7 +52,7 @@
     <main>
         <h1 class="tituloTalleres"> Talleres de alimentación</h1>
         <section class="row d-flex justify-content-evenly talleresFotoIzquierda">
-            <img class="col-12 col-lg-6 img-fluid imgTalleres1" src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Taller de alimentación realizado presencial en el colegio Instituto Ballester">
+            <img class="col-12 col-lg-6 img-fluid imgTalleres1" src="Imagenes/Foto taller de alimentacion.jpeg" loading="lazy" alt="Taller de alimentación realizado presencial en el jardin agronomitos">
             <p class="col-12 col-lg-6 textosTalleres">La educación alimentaria es fundamental para tener una vida saludable y aprender a mejorar diferentes aspectos de la alimentación. Por eso, considero fundamental la realizacion de talleres educativos para poder adquirir nuevos conocimientos relacionados con una buena nutrición y comenzar de a poco a introducirse en este cambio hacia una vida mejor y mas saludable. </p>    
         </section>
 
@@ -67,7 +67,7 @@
 <!-- Taller presencial-->
         <h2 class="titulos">Taller presencial </h2>
         <section class="row d-flex justify-content-evenly talleresFotoIzquierda">
-            <img class="col-12 col-lg-6 img-fluid imgTalleres3" loading="lazy" src="Imagenes/ean presencial.png" alt="Foto de un taller educativo con niños">
+            <img class="col-12 col-lg-6 img-fluid imgTalleres3" loading="lazy" src="Imagenes/Talleres alimentacion.jpg" alt="Foto de un taller educativo con niños">
             <p class="col-12 col-lg-6 textosTalleres"> Los talleres de alimentación presenciales se llevan a cabo en toda institucion (clubes, colegios, empresas, etc.) que quiera abordar de manera mas saludable la alimentación de sus integrantes. En ellos, abordamos diferentes tematicas segun los diferentes aspectos de la nutrición que se quieran profundizar como alimentación saludable, nutrición deportiva, alimentación en los primeros años de vida, alimentación para los adultos mayores, etc. .</p>
         </section>
 
