Arregle el contenedor de otros servicios que daba un poco de scroll y cambie los footer

--- a/antropometrias.html
+++ b/antropometrias.html
@@ -70,7 +70,7 @@
 
         <section>
             <h2 class="titulos tituloMasaMuscular">Determinacion de masa muscular</h2>
-            <div class="row d-flex justify-content-evenly antroFotoAIzquierda">
+            <div class="row d-flex justify-content-evenly antroFotoIzquierda">
                 <img class="col-12 col-lg-6 img-fluid fotoMusculo" loading="lazy" src="Imagenes/Pag antro.JPG" alt="Imagen de la masa muscular determinada a traves de la antropometria">
                 <p class="col-12 col-lg-6 textosAntro textoMasaMuscular"> La masa muscular es un elemento fundamental de la composición corporal y de la salud de todas las personas, tanto hombres como mujeres, niños y ancianos. <br>Con esto quiero decir que tanto la alimentación para aumentar la masa muscular como el entrenamiento de fuerza, deben ser dos pilares que no pueden faltar en la vida de ninguno de nosotros.</p>
             </div>
@@ -124,8 +124,8 @@
 <!--Otros servicios-->
         <h4 class="titulos">Otros Servicios:</h4>
         <section class="container-fluid otrosServicios">
-            <div class="row d-flex justify-content-evenly">
-                <div class="col-12 col-lg-3 d-flex justify-content-evenly">
+            <div class="row d-flex justify-content-evenly otrosServiciosCaja">
+                <div class="col-12 col-lg-3">
                     <div class="contenedorServicios">
                         <a href="planes-de-alimentación.html">
                             <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación" class="imgServicios">
@@ -136,7 +136,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 d-flex justify-content-evenly">
+                <div class="col-12 col-lg-3">
                     <div class="contenedorServicios">
                         <a href="talleres-de-alimentación.html">
                             <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
@@ -156,19 +156,19 @@
     <footer class="text-center text-white">
         <section class="container p-4">
             <div>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button"> 
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de" role="button"> 
                     <i title="Icono de whatsapp" class="fab fa-whatsapp"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">  
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.instagram.com/nutricion.jg/" role="button">  
                     <i title="Icono de Instagram" class="fab fa-instagram"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.facebook.com/Nutrici%C3%B3njg-113083484374716/?ref=py_c" role="button">
                     <i title="Icono de facebook" class="fab fa-facebook-f"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="mailto:licjulianagimenez@gmail.com?subject=Quiero más información&body=Hola Juliana! Quería más información acerca de " role="button">
                     <i title="Icono de mail" class="far fa-envelope"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.linkedin.com/in/juliana-gimenez-9651a5196/?originalSubdomain=ar" role="button">
                     <i title="Icono de Linkedin" class="fab fa-linkedin-in"></i>
                 </a>
             </div>
@@ -197,7 +197,7 @@
             <div class="text-center">
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
-                <a target="_blank" class="pieDePagina" href="https://api.whatsapp.com/send?phone=+5491124028206&text= Hola Juliana! Quería más información acerca de">
+                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
                     <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
