--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
                 <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.facebook.com/Nutrici%C3%B3njg-113083484374716/?ref=py_c" role="button">
                     <i title="Icono de facebook" class="fab fa-facebook-f"></i>
                 </a>
-                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="mailto:licjulianagimenez@gmail.com?subject=Quiero más información&body=Hola Juliana! Quería más información acerca de " role="button">
                     <i title="Icono de mail" class="far fa-envelope"></i>
                 </a>
                 <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.linkedin.com/in/juliana-gimenez-9651a5196/?originalSubdomain=ar" role="button">
