--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -119,8 +119,8 @@
 
         <h4 class="titulos">Otros Servicios:</h4>
         <section class="container-fluid otrosServicios">
-            <div class="row d-flex justify-content-evenly">
-                <div class="col-12 col-lg-3 d-flex justify-content-evenly">
+            <div class="row d-flex justify-content-evenly otrosServiciosCaja">
+                <div class="col-12 col-lg-3">
                     <div class="contenedorServicios">
                         <a href="planes-de-alimentación.html">
                             <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de plan de alimentación" class="imgServicios">
@@ -131,7 +131,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3 d-flex justify-content-evenly">
+                <div class="col-12 col-lg-3">
                     <div class="contenedorServicios">
                         <a href="antropometrias.html">   
                             <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
@@ -152,19 +152,19 @@
     <footer class="text-center text-white">
         <section class="container p-4">
             <div>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button"> 
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de" role="button"> 
                     <i title="Icono de whatsapp" class="fab fa-whatsapp"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">  
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.instagram.com/nutricion.jg/" role="button">  
                     <i title="Icono de Instagram" class="fab fa-instagram"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.facebook.com/Nutrici%C3%B3njg-113083484374716/?ref=py_c" role="button">
                     <i title="Icono de facebook" class="fab fa-facebook-f"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="mailto:licjulianagimenez@gmail.com?subject=Quiero más información&body=Hola Juliana! Quería más información acerca de " role="button">
                     <i title="Icono de mail" class="far fa-envelope"></i>
                 </a>
-                <a class="btn btn-outline-light btn-floating m-3" href="#!" role="button">
+                <a target="_blank" class="btn btn-outline-light btn-floating m-3" href="https://www.linkedin.com/in/juliana-gimenez-9651a5196/?originalSubdomain=ar" role="button">
                     <i title="Icono de Linkedin" class="fab fa-linkedin-in"></i>
                 </a>
             </div>
@@ -193,7 +193,7 @@
             <div class="text-center">
                 <p>LIC. Juliana Gimenez</p>
                 <p>MN:10.553</p>
-                <a target="_blank" class="pieDePagina" href="https://api.whatsapp.com/send?phone=+5491124028206&text= Hola Juliana! Quería más información acerca de">
+                <a target="_blank" class="pieDePagina" href="https://wa.me/+5491124028206?text= Hola Juliana! Quería más información acerca de">
                     <img src="Imagenes/Boton Whatsapp.png" loading="lazy" alt="Boton Whatsapp" class="botonWhatsapp">
                 </a>
             </div>
