Recetas pasado a scss y cambios en html recetas para que se vea bien

--- a/recetas.html
+++ b/recetas.html
@@ -9,7 +9,7 @@
     <meta name="keywords" content="comidas saludables, alimentacion saludable, alimentos ricos, alimentacion balanceada, comidas ricas, menu saludable, nutricion, nutricionista, comida real">
     <link rel="shortcut icon" href="Imagenes/Logo JG Nutricion.jpeg" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="SASS/main.css">
     <script src="https://kit.fontawesome.com/a31a6b2861.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -47,8 +47,8 @@
     </header>
     <main>
         <h1 class="tituloRecetas">Recetas</h1>
-        <h2 class="titulos">Pan integral con semillas</h2>
         <section>
+            <h2 class="titulos">Pan integral con semillas</h2>
             <div class="row d-flex justify-content-evenly recetasParteIzquierda">
                 <video class="col-12 col-lg-6 img-fluid videoPanIntegral" loading="lazy" src="Imagenes/Video Pan Integral.mp4" controls
                 alt="Video de la receta de pan integral con semillas"
@@ -56,13 +56,11 @@
                 <p class="col-12 col-lg-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Maxime tempore delectus voluptate nihil a ipsum magni labore mollitia placeat aperiam, consectetur, perspiciatis quisquam, perferendis doloremque assumenda. Nisi asperiores delectus doloribus, nostrum amet qui voluptate illum, accusantium quae nesciunt possimus aliquid sint repellendus fuga voluptates? Totam beatae eum ducimus? Totam, minus?
                 </p>
             </div>
-        </section>
-        <section>
+            <div class="row d-flex justify-content-evenly recetasParteDerecha">
             <h2 class="titulos">Pizza con masa de zanahorias</h2>
-                <div class="recetasParteDerecha">
-                    <video class="col-12 col-lg-6 img-fluid videoPizzaZanahoria" loading="lazy" src="Imagenes/Pizza con masa de zanahoria.mp4" controls alt="Video de la receta de la pizza de zanahorias"></video>
-                    <p class="col-12 col-lg-6"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eos optio, quod architecto reprehenderit modi nobis vitae odit. Nam, et maxime, inventore adipisci reprehenderit eius eaque aut possimus illum doloremque in, dicta hic vero tempora praesentium harum sit quisquam. In quasi expedita pariatur ut libero cum. Saepe id sapiente impedit!</p>
-                </div>
+                <video class="col-12 col-lg-6 img-fluid videoPizzaZanahoria" loading="lazy" src="Imagenes/Pizza con masa de zanahoria.mp4" controls alt="Video de la receta de la pizza de zanahorias"></video>
+                <p class="col-12 col-lg-6"> Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto eos optio, quod architecto reprehenderit modi nobis vitae odit. Nam, et maxime, inventore adipisci reprehenderit eius eaque aut possimus illum doloremque in, dicta hic vero tempora praesentium harum sit quisquam. In quasi expedita pariatur ut libero cum. Saepe id sapiente impedit!</p>
+            </div>
         </section>
     </main>
 
