--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -135,8 +135,8 @@
 
         <h4 class="titulos">Otros Servicios:</h4>
         <section class="container-fluid otrosServicios">
-            <div class="row d-flex justify-content-evenly otrosServiciosCaja">
-                <div class="col-12 col-lg-3">
+            <div class="row otrosServiciosCaja">
+                <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="antropometrias.html">   
                             <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
@@ -147,7 +147,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3">
+                <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="talleres-de-alimentación.html">
                             <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
