--- a/antropometrias.html
+++ b/antropometrias.html
@@ -124,8 +124,8 @@
 <!--Otros servicios-->
         <h4 class="titulos">Otros Servicios:</h4>
         <section class="container-fluid otrosServicios">
-            <div class="row d-flex justify-content-evenly otrosServiciosCaja">
-                <div class="col-12 col-lg-3">
+            <div class="row otrosServiciosCaja">
+                <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="planes-de-alimentación.html">
                             <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de planes de alimentación" class="imgServicios">
@@ -136,7 +136,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3">
+                <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="talleres-de-alimentación.html">
                             <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
