mq talleres de alimentacion a scss

--- a/talleres-de-alimentación.html
+++ b/talleres-de-alimentación.html
@@ -119,8 +119,8 @@
 
         <h4 class="titulos">Otros Servicios:</h4>
         <section class="container-fluid otrosServicios">
-            <div class="row d-flex justify-content-evenly otrosServiciosCaja">
-                <div class="col-12 col-lg-3">
+            <div class="row otrosServiciosCaja">
+                <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="planes-de-alimentación.html">
                             <img src="Imagenes/Planes de alimentacion.jpg" loading="lazy" alt="Servicio de plan de alimentación" class="imgServicios">
@@ -131,7 +131,7 @@
                         </a>
                     </div>
                 </div>
-                <div class="col-12 col-lg-3">
+                <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="antropometrias.html">   
                             <img src="Imagenes/antro index.JPG" loading="lazy" alt="Servicio de antropometrias" class="imgServicios"> 
