Cambie los textos de las paginas

--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -53,7 +53,7 @@
         <h1 class="titPlanes"> Planes de alimentación</h1>
         <section class="row d-flex justify-content-evenly planesSeccion1">
             <img class="col-12 col-lg-6 img-fluid juliAtendiendo" loading="lazy" src="Imagenes/atencion en consultorio.JPG" alt="Nutricionista atendiendo en consultorio realizando educacion alimentaria">
-            <p class="col-12 col-lg-6 textosPlanes">Los planes de alimentación son adaptados a cada persona segun los objetivos especificos que tiene, sus gustos, habitos y su rutina diaria. <br>En cada consulta vamos a ir trabajando juntos, mejorando paulatinamente la calidad de la alimentacion, acercandonos cada vez mas a cumplir los objetivos que nos planteamos y formando habitos para toda la vida. <br>¡¡ANIMATE A MEJORAR TU ALIMENTACIÓN, APRENDER COMO NUTRIRTE Y CAMBIAR TU VIDA!! </p>    
+            <p class="col-12 col-lg-6 textosPlanes">Los planes de alimentación son adaptados a cada persona según los objetivos que tiene, sus gustos, hábitos, rutina diaria, problemas de salud y mucho más. También se tiene en cuenta el tipo de trabajo, actividad física realizada y actividades extras. <br>La primera consulta nos servirá para conocernos en profundidad y, principalmente, conocer tus gustos alimentarios. Esto me permitirá diseñar un plan de alimentación flexible y adaptado a tu rutina. A lo largo de las consultas vamos a ir trabajando juntos, mejorando paulatinamente la calidad de la alimentación, acercándonos cada vez más a cumplir los objetivos que nos vayamos planteando y formando hábitos para toda la vida. <br>¡Animate a mejorar tu alimentación, aprender sobre la mejor manera de nutrir tu cuerpo y cambiar tu vida!</p>    
         </section>
 
 <!-- Tipos de planes de alimentacion-->
@@ -74,7 +74,7 @@
         <h3 class="titulos">Planes para deportistas</h3>
         <section class="row d-flex justify-content-evenly planesSeccion2">
                 <img class="col-12 col-lg-6 img-fluid planesImg2" loading="lazy" src="Imagenes/nutricion deportiva.jpg" alt="Foto de nutricion en el deporte">
-                <p class="col-12 col-lg-6 textosPlanes">Para ser los mejores en las diferentes disciplinas es de vital importancia cuidar la alimentación. La nutrición deportiva es fundamental para lograr potenciar el rendimiento al maximo y poder lograr los mejores resultados tanto en los entrenamientos como en las competencias.</p>
+                <p class="col-12 col-lg-6 textosPlanes">Para ser los mejores en las diferentes disciplinas es de vital importancia cuidar la alimentación. La nutrición deportiva es fundamental para lograr potenciar el rendimiento al máximo y poder lograr los mejores resultados tanto en los entrenamientos como en las competencias. <br> Es importante tener en cuenta que la alimentación del deportista suele requerir mayor cantidad de necesidades energéticas y precisa hacer hincapié en asuntos como hidratación, recuperación, entre muchos otros. <br>Sin dudas, te recomiendo que comiences con un plan de alimentación 100% personalizado a tu rutina para superar tu rendimiento actual y progresar en tu disciplina. </p>
         </section>
         <h3 class="titulos">Planes vegetarianos/veganos</h3>
         <section class="row d-flex justify-content-evenly planesSeccion3"> 
@@ -84,7 +84,7 @@
         <h3 class="titulos">Planes de alimentación en el embarazo</h3>
         <section class="row d-flex justify-content-evenly planesSeccion4"> 
                 <img class="col-12 col-lg-6 img-fluid planesImg4" loading="lazy" src="Imagenes/Embarazo.jpg" alt="Foto de alimentación en embarazadas">
-                <p class="col-12 col-lg-6 textosPlanes"> Durante esta etapa hermosa de la vida, las mujeres debemos procurar cuidar nuestra alimentación ya que aumentan los requerimientos de muchos nutrientes y tenemos que poner el foco en la nutrición. <br>Juntas vamos a trabajar sobre la alimentación para garantizar un embarazo feliz, lleno de nutrientes y de la mejor calidad posible (Tanto para nosotras como para nuestro bebe)</p>
+                <p class="col-12 col-lg-6 textosPlanes"> Durante esta importante etapa de la vida, las mujeres debemos procurar cuidar nuestra alimentación ya que aumentan los requerimientos de muchos nutrientes y tenemos que poner un especial foco en la nutrición. <br> Juntas vamos a trabajar sobre la alimentación para garantizar un embarazo cuidado, saludable, contemplando siempre tus necesidades, tus hábitos y preferencias. <br>Es importante recordar que, a partir de ahora, no solo estas nutriendo tu cuerpo si no también el de tu bebé. El desarrollo cognitivo e intelectual del bebé se verá afectado (positiva o negativamente) considerando tu manera de nutrirte. Esto también contempla la etapa de lactancia materna. ¡El momento de empezar es hoy!</p>
         </section>
         
 <!-- RESERVA TU TURNO -->
