--- a/antropometrias.html
+++ b/antropometrias.html
@@ -52,7 +52,8 @@
         <h1 class="tituloAntropometria"> Antropometrías</h1>
         <section class="row d-flex justify-content-evenly antroFotoIzquierda">
             <img class="col-12 col-lg-6 img-fluid fotoAntro" loading="lazy" src="Imagenes/Foto 1 antro.JPG" alt="Foto principal de la pagina de antropometrias">
-            <p class="col-12 col-lg-6 textosAntro">La antropometria es una serie de mediciones a partir de la cual podemos conocer con más especificidad, como es la composición corporal de cada uno de nosotros. <br>Esta herramienta es un excelente complemento a la balanza ya que nos permite saber realmente por que esta conformado nuestro peso. <br> Entonces gracias a la antropometria vamos a conocer dos variables: <br> Las que son modificables (Con una buena alimentación y entrenamiento):  MASA MUSCULAR y MASA GRASA <br> Las no modificables: MASA OSEA (esqueleto), PIEL y MASA RESIDUAL (Organos y visceras)</p>    
+            <p class="col-12 col-lg-6 textosAntro">La antropometría consiste en una serie de mediciones a partir de la cual podemos conocer con más especificidad, como es la composición corporal de cada individuo. <br> Esta herramienta es un excelente complemento a la balanza ya que nos permite saber realmente de que está conformado nuestro peso. <br>Gracias a la antropometría vamos a conocer dos variables: <strong> Las modificables </strong> (Con una buena alimentación y entrenamiento): MASA MUSCULAR y MASA GRASA y <strong>las no modificables: </strong> MASA OSEA (esqueleto), PIEL y MASA RESIDUAL (Órganos y vísceras)
+                </p>    
         </section>
 
 <!-- Masa adiposa-->
@@ -72,7 +73,7 @@
             <h2 class="titulos tituloMasaMuscular">Determinacion de masa muscular</h2>
             <div class="row d-flex justify-content-evenly antroFotoIzquierda">
                 <img class="col-12 col-lg-6 img-fluid fotoMusculo" loading="lazy" src="Imagenes/Pag antro.JPG" alt="Imagen de la masa muscular determinada a traves de la antropometria">
-                <p class="col-12 col-lg-6 textosAntro textoMasaMuscular"> La masa muscular es un elemento fundamental de la composición corporal y de la salud de todas las personas, tanto hombres como mujeres, niños y ancianos. <br>Con esto quiero decir que tanto la alimentación para aumentar la masa muscular como el entrenamiento de fuerza, deben ser dos pilares que no pueden faltar en la vida de ninguno de nosotros.</p>
+                <p class="col-12 col-lg-6 textosAntro textoMasaMuscular"> La masa muscular es un elemento fundamental de la composición corporal y de la salud de todas las personas, tanto hombres como mujeres, niños y ancianos. <br>Si bien el entrenamiento de fuerza es fundamental para aumentar los niveles de masa magra, también es muy importante saber acompañar esta actividad física con el correcto balance energético y de macro/micronutrientes. Estos deben ser dos pilares infaltables en la vida de cada uno de nosotros. </p>
             </div>
         </section> 
 
