Cambio de imagenes en otros servicios de talleres de alimentacion

--- a/planes-de-alimentación.html
+++ b/planes-de-alimentación.html
@@ -150,7 +150,7 @@
                 <div class="col-12 col-lg-6 d-flex justify-content-center">
                     <div class="contenedorServicios">
                         <a href="talleres-de-alimentación.html">
-                            <img src="Imagenes/Talleres alimentacion.jpg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
+                            <img src="Imagenes/Foto taller de alimentacion.jpeg" loading="lazy" alt="Servicio de talleres de alimentación" class="imgServicios">
                             <div class="capaIndex">
                                 <p class="textoDelServicio">Talleres de alimentación</p>
                                 <p class="clicMasInfo">Hacé clic para más información</p>
